--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,20 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+
     }
 }
+
+subprojects {
+    repositories {
+        mavenCentral()
+        maven { url 'https://devrepo.kakao.com/nexus/content/groups/public/' }
+    }
+}
+
+
+
+
 
 task clean(type: Delete) {
     delete rootProject.buildDir
