--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
         }
     }
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/User'] } }
+
+    //카카오 SDK설정 java 8사용을 위한 build.gradle 설정
+
 }
 
 dependencies {
@@ -46,6 +49,15 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:21.7.0'
     implementation 'com.google.firebase:firebase-database:19.5.0'
     implementation 'com.squareup.picasso:picasso:2.5.2'
+
+    //카카오 SDK 모듈 설정
+    implementation "com.kakao.sdk:v2-user:2.0.3" // 카카오 로그인, 사용자 관리
+    implementation "com.kakao.sdk:v2-talk:2.0.3" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-story:2.0.3" // 카카오스토리
+    implementation "com.kakao.sdk:v2-link:2.0.3" // 메시지(카카오링크)
+    implementation "com.kakao.sdk:v2-navi:2.0.3" // 카카오내비
+    implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
+
 
 
     // Glide Library
