--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     sourceSets { main { assets.srcDirs = ['src/main/assets', 'src/main/assets/User'] } }
 
     //카카오 SDK설정 java 8사용을 위한 build.gradle 설정
@@ -58,10 +59,15 @@ dependencies {
     implementation "com.kakao.sdk:v2-navi:2.0.3" // 카카오내비
     implementation group: project.KAKAO_SDK_GROUP, name: 'usermgmt', version: project.KAKAO_SDK_VERSION
 
-
-
     // Glide Library
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
     implementation 'com.google.firebase:firebase-auth:19.4.0'
+
+    //카카오페이에 사용될 retrofit 라이브러리 선언
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.0")
+
+
 }
